Implement all pre actions for four basic characters.